--- a/aula/tesste.html
+++ b/aula/tesste.html
@@ -26,7 +26,7 @@
     <p> Já me livrei!! </p>
 
     <script>
-        window.alert('Minha primeira mensagem')
+        window.alert('Olá')
         window.confirm('Está gostando?')
         window.prompt('Qual é o seu nome?')
     </script>
