--- a/aula/tesste.html
+++ b/aula/tesste.html
@@ -22,13 +22,13 @@
 
 
 <body>
-    <h1> Olá, Mundo! </h1>
-    <p> Já me livrei!! </p>
+    <h1> Olá </h1>
+    <p> TESTE!! </p>
 
     <script>
         window.alert('Olá')
-        window.confirm('Está gostando?')
-        window.prompt('Qual é o seu nome?')
+        window.confirm('Teste')
+        window.prompt('Testee?')
     </script>
 
 
